feat: embed music scrapers in binary + keymint cmd, wvd device flag
